[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprite/Door.png" type="Texture" id=1]
[ext_resource path="res://sprite/kramer.png" type="Texture" id=2]
[ext_resource path="res://scenes/topfloor.gd" type="Script" id=3]
[ext_resource path="res://scenes/dailoge.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprite/kman.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 26.5, 27 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 60, 100 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 60, 0, 60, 100 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 120, 0, 60, 100 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 11.5, 25 )

[sub_resource type="Animation" id=7]
resource_name = "fadein"
length = 25.0
tracks/0/type = "value"
tracks/0/path = NodePath("Face:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.2, 2, 23.9, 25.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Door" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Door"]
position = Vector2( 17, -7 )
scale = Vector2( 0.58, 0.58 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
position = Vector2( 17.5, -7 )
shape = SubResource( 5 )

[node name="Kramer" type="Area2D" parent="."]

[node name="Face" type="AnimatedSprite" parent="Kramer"]
position = Vector2( -51, -106 )
frames = SubResource( 4 )
frame = 2
playing = true

[node name="kman" type="Sprite" parent="Kramer"]
position = Vector2( 126, -10 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kramer"]
position = Vector2( 116, -4 )
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Kramer"]
anims/fadein = SubResource( 7 )

[node name="dailoge" parent="." instance=ExtResource( 4 )]
position = Vector2( -18, -160 )
scale = Vector2( 0.25, 0.25 )

[connection signal="body_entered" from="Door" to="." method="_on_Door_body_entered"]
[connection signal="body_exited" from="Door" to="." method="_on_Door_body_exited"]
[connection signal="body_entered" from="Kramer" to="." method="_on_Kramer_body_entered"]
